drop endorsed, remove obsolete code
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>